# hardforks

./: Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: ci.yml
crates/hardforks/: CHANGELOG.md  Cargo.toml  README.md
crates/hardforks/src/: error.rs  forkcondition.rs  lib.rs
crates/hardforks/src/arbitrum/: mainnet.rs  mod.rs  sepolia.rs
crates/hardforks/src/ethereum/: holesky.rs  hoodi.rs  mainnet.rs  mod.rs  sepolia.rs  testnet.rs
crates/hardforks/src/hardfork/: ethereum.rs  macros.rs  mod.rs
crates/op-hardforks/src/: lib.rs
