[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.81"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/hardforks"
repository = "https://github.com/alloy-rs/hardforks"
exclude = ["benches/", "tests/"]

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
alloy-hardforks = { version = "0.1.1", path = "crates/hardforks", default-features = false }
alloy-op-hardforks = { version = "0.1.1", path = "crates/op-hardforks", default-features = false }

# ethereum
alloy-chains = { version = "0.1.32", default-features = false }
alloy-eip2124 = { version = "0.1.0", default-features = false }
alloy-primitives = { version = "0.8.15", default-features = false }

# misc
auto_impl = "1"
serde = { version = "1.0", features = ["derive"] }
dyn-clone = "1.0.17"
