[package]
name = "alloy-hardforks"
description = "Bindings for named hardforks"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-chains.workspace = true
alloy-eip2124.workspace = true
alloy-primitives.workspace = true

serde = { workspace = true, optional = true }

auto_impl.workspace = true
dyn-clone.workspace = true

[features]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
]
